--- a/result.html
+++ b/result.html
@@ -1,1 +1,31 @@
-<html><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><head></head><body><center>Пример создания отчета<table border=1><tr><td>ID</td><td>Название</td><td>Категория</td></tr><tr><td>1</td><td>Помидоры</td><td>Овощи</td></tr><tr><td>2</td><td>Яблоки</td><td>Фрукты</td></tr><tr><td>3</td><td>Говядина</td><td>Мясо</td></tr></table></center></body></html>
+<html>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <head></head>
+  <body>
+    <center>
+      Пример создания отчета
+      <table border=1>
+        <tr>
+          <td>ID</td>
+          <td>Название</td>
+          <td>Категория</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Помидоры</td>
+          <td>Овощи</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Яблоки</td>
+          <td>Фрукты</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Говядина</td>
+          <td>Мясо</td>
+        </tr>
+      </table>
+    </center>
+  </body>
+</html>
